--- a/ebuyfrontend/src/app/home/home.component.html
+++ b/ebuyfrontend/src/app/home/home.component.html
@@ -1,31 +1,47 @@
-<!-- Carousel -->
-<div id="demo" class="carousel slide" data-bs-ride="carousel">
+<div class="container-fluid">
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+  </ol>
 
-    <!-- Indicators/dots -->
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
-      <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
-      <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
-    </div>
-  
-    <!-- The slideshow/carousel -->
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="i1.jpeg"  class="d-block w-100" style="height: 400px;width: 100%;">
-      </div>
-      <div class="carousel-item">
-        <img src="chicago.jpg" alt="Chicago" class="d-block w-100">
-      </div>
-      <div class="carousel-item">
-        <img src="ny.jpg" alt="New York" class="d-block w-100">
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="item active">
+      <img src="i1.jpg" style="width: 100% ;height: 600px; ">
+      <div class="carousel-caption" style="color: black; font-weight: bolder;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
+        <h2>Kitchen Appliances</h2>
+        <p>Buy Kitchen appliances</p>
       </div>
     </div>
-  
-    <!-- Left and right controls/icons -->
-    <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon"></span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
-      <span class="carousel-control-next-icon"></span>
-    </button>
+
+    <div class="item">
+      <img src="i2.jpg"  style="width: 100% ;height: 600px;">
+      <div class="carousel-caption" style="color: black; font-weight: bolder;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
+        <h2>Books</h2>
+        <p>Buy secondhand book</p>
+      </div>
+    </div>
+
+    <div class="item">
+      <img src="i3.webp"  style="width: 100% ;height: 600px;" >
+      <div class="carousel-caption" style=" font-weight: bolder;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
+        <h2>Mobiles & Phones</h2>
+        <p>Buy secondhand mobiles and phones</p>
+      </div>
+    </div>
   </div>
+
+  <!-- Left and right controls -->
+  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+</div>
