--- a/ebuyfrontend/src/app/view-feedback/view-feedback.component.html
+++ b/ebuyfrontend/src/app/view-feedback/view-feedback.component.html
@@ -3,7 +3,7 @@
     <div class="row" >
         <div class="col-sm-6 col-sm-offset-3" *ngFor="let f of farr" >
             <div class="caption">
-                Posted by :{{f.email}}<br>
+                Posted by :{{f.name}} {{f.email}}<br>
                 Message :{{f.message}}
                 <hr>
             </div>
